--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Yabin Zhang"
+title                    : "Xinpeng Lee"
 title_separator          : "-"
-name                     : &name "Yabin Zhang"
+name                     : &name "Xinpeng Lee"
 description              : &description "Postgraduate of School of Electronic and Information Engineering, South China University of Technology"
-url                      : https://YBZh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Sampson-Lee.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "YBZh/YBZh.github.io"
+repository               : "Sampson-Lee/Sampson-Lee.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
