--- a/_config.yml
+++ b/_config.yml
@@ -79,13 +79,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yabin Zhang"
-  avatar           : "yabinzhang.jpg"
+  name             : "Xinpeng Lee"
+  avatar           : "xinpenglee.jpg"
   bio              : "Postgraduate of School of Electronic and Information Engineering, South China University of Technology"
   location         : "Guangzhou China"
   employer         :
   googlescholar    : 
-  email            : ybzhang815@gmail.com
+  email            : li.xin.peng@outlook.com
   uri              :
   bitbucket        :
   codepen          :
@@ -93,7 +93,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : YBZh
+  github           : Sampson-Lee
   google_plus      :
   keybase          :
   instagram        :
